:green_heart: 修复 Ruff Lint 分支指定错误

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -3,7 +3,7 @@ name: Ruff Lint
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "nonebot_plugin_dcqq_relay/**"
   pull_request:
