--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ python = "^3.9"
 nonebot2 = {extras = ["aiohttp", "fastapi"], version = "^2.2.1"}
 nonebot-adapter-onebot = "^2.4.3"
 nonebot-adapter-discord = "^0.1.7"
-nonebot-plugin-apscheduler = "^0.4.0"
-nonebot-plugin-localstore = "^0.6.0"
+nonebot-plugin-orm = {extras = ["default"], version = "^0.7.3"}
 pillow = "^10.3.0"
 filetype = "^1.2.0"
 
