--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,11 +21,11 @@ repos:
       - id: black
         stages: [commit]
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
     hooks:
-      - id: prettier
-        stages: [commit]
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
 
   - repo: https://github.com/nonebot/nonemoji
     rev: v0.1.4
