--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ nonebot-adapter-discord = "^0.1.8"
 nonebot-plugin-orm = {extras = ["default"], version = "^0.7.3"}
 pillow = "^10.3.0"
 filetype = "^1.2.0"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
