--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ nonebot-plugin-orm = {extras = ["default"], version = "^0.7.3"}
 pillow = "^10.3.0"
 filetype = "^1.2.0"
 pydub = "^0.25.1"
+pysilk-mod = "^1.6.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.6"
