--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ filetype = "^1.2.0"
 pydub = "^0.25.1"
 pysilk-mod = "^1.6.4"
 nonebot-plugin-localstore = "^0.7.4"
+audioop-lts = {python = "^3.13", version = "*"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.2"
