--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,15 +12,26 @@ jobs:
       id-token: write
       contents: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      - name: Setup Python environment
-        uses: ./.github/actions/setup-python
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.10'
+
+      - name: Sync Dependencies
+        run: uv sync
+        shell: bash
 
       - name: Get Version
         id: version
         run: |
-          echo "VERSION=$(poetry version -s)" >> $GITHUB_OUTPUT
+          echo "VERSION=$(uv version --short)" >> $GITHUB_OUTPUT
           echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
           echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
@@ -29,10 +40,10 @@ jobs:
         run: exit 1
 
       - name: Build Package
-        run: poetry build
+        run: uv build
 
       - name: Publish Package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        run: uv publish
 
       - name: Publish Package to GitHub Release
         run: gh release upload --clobber ${{ steps.version.outputs.TAG_NAME }} dist/*.tar.gz dist/*.whl
